# GoMartini

./: .gitignore  README.md  create_goVirt.py  pyproject.toml  setup.cfg  setup.py
ContactMapGenerator/: LICENSE  README.html  README.md  chemical_map.c  contact_map.c  contact_map.h  makefile  pdb_map.c  protein_map.c
GoMartini/: __init__.py  create_goVirt.py
