[build-system]
requires = [
    "setuptools >= 65",
    "setuptools_scm[toml]",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "GoMartini"
dynamic = ["version"]
dependencies = [
    'importlib_metadata; python_version < "3.8"',
    "numpy >= 1.22.1, == 1.*",
]
[tool.setuptools_scm]
write_to = "GoMartini/_version.py"