[metadata]
name = gomartini
author = L. Borges-Araújo
author_email = lpborara@gmail.com
description_file = README.md
description-content-type = text/markdown; charset=UTF-8
url = https://github.com/Martini-Force-Field-Initiative/GoMartini
license = Apache 2.0
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords = martini MD martinize go-model

[options]
setup-requires =
    setuptools >= 30.3.0
    pbr
install-requires =  
    numpy
zip-safe = False

[options.entry_points]
console_scripts = 
    create_goVirt = GoMartini.create_goVirt:main